# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\Api\DebugSentryController;
 use App\Http\Controllers\Api\FilterObjectController;
+use App\Http\Controllers\Api\ReqResController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -23,3 +24,9 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::get('filter', FilterObjectController::class);
 
 Route::get('/debug-sentry', DebugSentryController::class);
+
+Route::prefix('reqres')
+    ->group(function() {
+        Route::post('register', [ReqResController::class, 'register']);
+        Route::post('login', [ReqResController::class, 'login']);
+    });
